--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ env:
   global:
   - DOCKER_REPO=christopher102994
   - DOCKER_NAME=docker-filezilla
-  - DOCKER_TAG=alpine-3.10
+  - DOCKER_FILE=Dockerfile
+  - IMAGE_TAG=alpine-3.10
   - BASE_IMAGE=christopher102994/docker-base-img-gui:alpine3.10
 
 script:
